Alterei a página principal

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo eaque placeat quod quaerat delectus eligendi. Asperiores, eveniet est ducimus at dignissimos eligendi hic earum voluptates architecto aspernatur aperiam, amet corrupti!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima eligendi unde facere mollitia doloribus, voluptatibus repellat labore atque cumque rem adipisci! Consequuntur in, itaque qui architecto ipsum eius! Officia, commodi.</p>
 </body>
 </html>
